@@ -1,6 +1,6 @@
 include $(top_srcdir)/common/python.mk
 
-component_PYTHON = __init__.py vp6.py vp6_wizard.py
+component_PYTHON = __init__.py vp6.py wizard_gtk.py
 componentdir = $(libdir)/flumotion/python/flumotion/component/encoders/vp6
 component_DATA = \
 	vp6.xml \
