@@ -1,5 +1,13 @@
 2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/component/encoders/vp6/Makefile.am:
+	* flumotion/component/encoders/vp6/wizard_gtk.py (added):
+	* flumotion/component/encoders/vp6/admin_gtk.py (deleted):
+	* flumotion/component/encoders/vp6/flv_wizard.py (deleted):
+	  Further moving and fixing, pass distcheck again.
+
+2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* flumotion/component/encoders/flv/flv.xml:
 	* flumotion/component/encoders/flv/vp6.py (deleted):
 	* flumotion/component/encoders/flv/vp6_wizard.py (deleted):
